tests/parse/error_int_literal0.co
// RUN: not choreo %s 2>&1 | FileCheck %s

__co__ void foo () {
  x = 18446744073709551619ull;
}

// CHECK: error: unsigned integer literal '18446744073709551619ull' out of range [0, 18446744073709551615].
